--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -8,7 +8,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 300;
-  font-display: swap;
+  font-display: optional;
   size-adjust: 107%;
   ascent-override: 107%;
   descent-override: 27%;
@@ -20,7 +20,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: optional;
   size-adjust: 107%;
   ascent-override: 107%;
   descent-override: 27%;
@@ -32,7 +32,7 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
-  font-display: swap;
+  font-display: optional;
   size-adjust: 107%;
   ascent-override: 107%;
   descent-override: 27%;
@@ -44,7 +44,7 @@
   font-family: 'Lora';
   font-style: italic;
   font-weight: 400;
-  font-display: swap;
+  font-display: optional;
   size-adjust: 93.9%;
   ascent-override: 93.9%;
   descent-override: 23%;
@@ -56,7 +56,7 @@
   font-family: 'Lora';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: optional;
   size-adjust: 93.9%;
   ascent-override: 93.9%;
   descent-override: 23%;
@@ -68,7 +68,7 @@
   font-family: 'Lora';
   font-style: normal;
   font-weight: 600;
-  font-display: swap;
+  font-display: optional;
   size-adjust: 93.9%;
   ascent-override: 93.9%;
   descent-override: 23%;
